fix(looks): Do not allow overflow on article

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,6 +51,9 @@ img + em {
 }
 
 article {
+  width: 100%;
+  overflow: hidden;
+
   header {
     margin: 0;
   }
